<resources>
    <string name="app_name">Employee Provident Fund(EPF) Investment Scheme Eligibility Calculator</string>
    <string name="date">DD/MM/YYYY </string>
    <string name="birthday">Select Birth Date</string>
    <string name="title">Required Basic Saving in Account 1:</string>
    <string name="age">Your Age: </string>
    <string name="saving">Minimum Basic Saving: </string>
    <string name="transfer">Allowable Investment: </string>
    <string name="buttonReset">Reset </string>
</resources>
